--- a/index.html
+++ b/index.html
@@ -198,3 +198,165 @@
 </div>
 
 </body></html>
+<!DOCTYPE html>
+<html lang="en"><head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Elentre Sarees</title>
+<link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
+<link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Newsreader:wght@400;500;700;800&amp;family=Noto+Sans:wght@400;500;700;900" onload="this.rel='stylesheet'" rel="stylesheet"/>
+<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<script>
+      tailwind.config = {
+        darkMode: "class",
+        theme: {
+          extend: {
+            colors: {
+              primary: "#e61980",
+              "background-light": "#f8f6f7",
+              "background-dark": "#211119",
+            },
+            fontFamily: {
+              display: ["Newsreader"],
+            },
+            borderRadius: {
+              DEFAULT: "0.5rem",
+              lg: "1rem",
+              xl: "1.5rem",
+              full: "9999px"
+            },
+          },
+        },
+      };
+    </script>
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+</head>
+<body class="bg-background-light dark:bg-background-dark font-display text-gray-800 dark:text-gray-200">
+<div class="min-h-screen">
+<header class="border-b border-gray-200 dark:border-gray-800">
+<div class="container mx-auto px-4 sm:px-6 lg:px-8">
+<div class="flex h-20 items-center justify-between">
+<div class="flex items-center gap-8">
+<a class="flex items-center gap-2" href="#">
+<span class="material-symbols-outlined text-primary text-3xl">local_florist</span>
+<span class="text-2xl font-bold text-gray-900 dark:text-white">Elentre</span>
+</a>
+<nav class="hidden md:flex items-center gap-8">
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#">New Arrivals</a>
+<a class="text-sm font-medium text-primary" href="#">Sarees</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Lehengas</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Jewellery</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Sale</a>
+</nav>
+</div>
+<div class="flex items-center gap-4">
+<div class="relative hidden sm:block">
+<span class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-gray-400">search</span>
+<input class="w-full rounded-full bg-gray-100 dark:bg-gray-800/50 pl-10 pr-4 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-primary/50" placeholder="Search" type="text"/>
+</div>
+<button class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800/50 transition-colors">
+<span class="material-symbols-outlined">favorite_border</span>
+</button>
+<button class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800/50 transition-colors">
+<span class="material-symbols-outlined">shopping_bag</span>
+</button>
+</div>
+</div>
+</div>
+</header>
+<main class="container mx-auto px-4 sm:px-6 lg:px-8 py-12">
+<h1 class="text-4xl font-bold tracking-tight text-gray-900 dark:text-white mb-8">Sarees</h1>
+<div class="flex flex-col lg:flex-row gap-8">
+<aside class="w-full lg:w-1/4">
+<div class="space-y-6">
+<div>
+<h3 class="text-lg font-semibold mb-3 text-gray-900 dark:text-white">Filters</h3>
+<div class="space-y-4">
+<div class="flex items-center justify-between">
+<label class="text-sm" for="color">Color</label>
+<span class="material-symbols-outlined text-gray-500">expand_more</span>
+</div>
+<div class="flex items-center justify-between">
+<label class="text-sm" for="material">Material</label>
+<span class="material-symbols-outlined text-gray-500">expand_more</span>
+</div>
+<div class="flex items-center justify-between">
+<label class="text-sm" for="price">Price Range</label>
+<span class="material-symbols-outlined text-gray-500">expand_more</span>
+</div>
+</div>
+</div>
+<div>
+<h3 class="text-lg font-semibold mb-3 text-gray-900 dark:text-white">Sort By</h3>
+<div class="space-y-2">
+<button class="w-full text-left text-sm p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800/50">Popularity</button>
+<button class="w-full text-left text-sm p-2 rounded bg-primary/10 text-primary dark:bg-primary/20">New Arrivals</button>
+<button class="w-full text-left text-sm p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800/50">Price: Low to High</button>
+<button class="w-full text-left text-sm p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800/50">Price: High to Low</button>
+</div>
+</div>
+</div>
+</aside>
+<div class="flex-1">
+<div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-6">
+<div class="group">
+<div class="aspect-[3/4] w-full overflow-hidden rounded-lg bg-gray-200 dark:bg-gray-800">
+<img alt="Elegant Silk Saree" class="h-full w-full object-cover object-center group-hover:opacity-75 transition-opacity" src="https://lh3.googleusercontent.com/aida-public/AB6AXuD-ZE62B9en3HGVBsNuJ-QW4lRg8adE3OS60HnDX6sc9gcebnvHkZkB8KwAUB_qK98eQ1a1yx1t2HmKjyNxvCsLnKOE0IdomaonrfntmmPEKwuDqVvMFWitSymagMBW5Pca4P6WjFki7xP07SsbZVrMQb8A0pXxBnatUJsQiP842WgdeD9DZSdHOKmPIqylysVgWdxphtyy8r-qWdFm8P4I07JthrwnbG1qHIMOJUe0m0qwNLty9kT88t7RC-3JHjha11UipSDzAXD3"/>
+</div>
+<div class="mt-4">
+<h3 class="text-base font-medium text-gray-900 dark:text-white">Elegant Silk Saree</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">$150</p>
+</div>
+</div>
+<div class="group">
+<div class="aspect-[3/4] w-full overflow-hidden rounded-lg bg-gray-200 dark:bg-gray-800">
+<img alt="Designer Georgette Saree" class="h-full w-full object-cover object-center group-hover:opacity-75 transition-opacity" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDCYfsLcz5AHmV5XHpYTgRbBBUm9QSpzHzFZ4u-kxyNzglQEYuPa2UN7glf2f6XefqeQmI6v7l8rWrGqg1icNsf2qV3zTCOMImltXA7MxG2UOdUShoH9K_r9S8KNOmSiNPTgs5xgilHtQPzIO-SfMGk8iK0jrddlH1yeX1VA4s-0tgPxr9L68xHJXj21PsQOqFRrudDy3YIIO04R17SkZXHyuzX_c9ckVVr1tQyx7VHWMuDex3Q76mnb9AHATLoZOIHH3xxTLKLspNR"/>
+</div>
+<div class="mt-4">
+<h3 class="text-base font-medium text-gray-900 dark:text-white">Designer Georgette Saree</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">$120</p>
+</div>
+</div>
+<div class="group">
+<div class="aspect-[3/4] w-full overflow-hidden rounded-lg bg-gray-200 dark:bg-gray-800">
+<img alt="Traditional Cotton Saree" class="h-full w-full object-cover object-center group-hover:opacity-75 transition-opacity" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBxoRY11VC1uxSGqpp5SCdkN0oRwTh3NmxCFyGdvfXk7QcBmEpXvD6eRFJuU3HptqmWY5nAVlBLMc_6rk1YO1O7jcQTae3v5Tc4zSawJwlwN95Z3W0Xg5Vco1mgJcx0cQJwDciHzYmFh0ZcsNeajMmPKUsTS4lwoKHv005187OiDIfofDeltiHg8Raq_6FwFJEpK2koNRyQ2eLDJhlIayGM9zLre_G8vtCDWfnpijw30TK_lG_e_TB0rLGtcrmf5k-160_qy9fXuqX4"/>
+</div>
+<div class="mt-4">
+<h3 class="text-base font-medium text-gray-900 dark:text-white">Traditional Cotton Saree</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">$80</p>
+</div>
+</div>
+<div class="group">
+<div class="aspect-[3/4] w-full overflow-hidden rounded-lg bg-gray-200 dark:bg-gray-800">
+<img alt="Modern Chiffon Saree" class="h-full w-full object-cover object-center group-hover:opacity-75 transition-opacity" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAQJ1qJE_rcOSsl43K2J0oDLWRE67s70S7my700kujDyi6oQoETx7IdjNS21RGPKtqqNztpAAjXGWmAX6LMJe5dPH9Bl7fHwU5c-ZxOonh9wxxPPHlniGIzreQ9Q7k3A-9y8bGlYK13dyZ0xvHTsy5-EgfmrL_2aSsaKXQyzacN6qfvvYJ1PRQCbGQEtpRMHt1A5qPalA5boZtMIpiw_SLLkNRiAkblF6LMZ-vvQurPBOu03Zho0ctuPgTXtSG8f7NKoAKmzJAWWAVR"/>
+</div>
+<div class="mt-4">
+<h3 class="text-base font-medium text-gray-900 dark:text-white">Modern Chiffon Saree</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">$100</p>
+</div>
+</div>
+<div class="group">
+<div class="aspect-[3/4] w-full overflow-hidden rounded-lg bg-gray-200 dark:bg-gray-800">
+<img alt="Festive Banarasi Saree" class="h-full w-full object-cover object-center group-hover:opacity-75 transition-opacity" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBwM9_albSnJyzrDL1nIzScWs9VuPvSd8bPmJSCX-TMYpPyceTINBNzt8_jy7Yp1Y1YzGP05alaSgTsTfFkZ9GKt_Cu9UdrE-RwwIFvz0h33EsHUCKNMIZXG-SvX5GWBBsov068wccZUE27Y2r-LPvl198kIlNpyJeb5BixZClKtjaoPlsiLWee5T4sxkxzrWVqAc-ll4Aw_RcGuEInxYMYR-2MFm3k-Dn-vUP34xcQ531TWkhVmXhgXeYcYFXFmi43QsBB7m37nHII"/>
+</div>
+<div class="mt-4">
+<h3 class="text-base font-medium text-gray-900 dark:text-white">Festive Banarasi Saree</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">$200</p>
+</div>
+</div>
+<div class="group">
+<div class="aspect-[3/4] w-full overflow-hidden rounded-lg bg-gray-200 dark:bg-gray-800">
+<img alt="Casual Linen Saree" class="h-full w-full object-cover object-center group-hover:opacity-75 transition-opacity" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAw6xA4aCFm0xANANyZbYpYcyZmV8_WOrNtbi2rnl6LY1nTkdmA34zO2O8UfxiK5Hv3vyR45EkSjRwWhMjw83F3L0IMMsm0qNthEc7f1DYxtAOWRMQhZbUCfal9lopYzMT6bzMgi9F3wrO9yGbcXr_Q6MLcQVHzGxXsG6WK7-RcXWZJ1YJbbZM-GtOJBQQewFUtiRg_xBqq4F2rsvqqcw7Sn4xy2Ktvjn351XJTjuMXZ9tROte5vAQ0rzP7O9lNtqbZr-rNycFw3iRX"/>
+</div>
+<div class="mt-4">
+<h3 class="text-base font-medium text-gray-900 dark:text-white">Casual Linen Saree</h3>
+<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">$90</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</main>
+</div>
+
+</body></html>
