--- a/index.html
+++ b/index.html
@@ -360,3 +360,137 @@
 </div>
 
 </body></html>
+<!DOCTYPE html>
+<html lang="en"><head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Elentre Admin - Edit Saree</title>
+<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&amp;display=swap" rel="stylesheet"/>
+<script>
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#e61980",
+                        "background-light": "#f8f6f7",
+                        "background-dark": "#211119",
+                        "text-light": "#1a1015",
+                        "text-dark": "#f8f6f7",
+                        "subtle-light": "#ede7ea",
+                        "subtle-dark": "#3a2c33",
+                        "placeholder-light": "#a18a95",
+                        "placeholder-dark": "#918088",
+                        "border-light": "#e4dce0",
+                        "border-dark": "#4a3d43",
+                    },
+                    fontFamily: {
+                        "display": ["Newsreader", "serif"]
+                    },
+                    borderRadius: {
+                        "DEFAULT": "0.5rem",
+                        "lg": "1rem",
+                        "xl": "1.5rem",
+                        "full": "9999px"
+                    },
+                },
+            },
+        }
+    </script>
+<style>
+        .form-input, .form-textarea {
+            transition: all 0.2s ease-in-out;
+        }
+        .form-input:focus, .form-textarea:focus {
+            box-shadow: 0 0 0 2px theme('colors.primary / 50%');
+            border-color: theme('colors.primary');
+        }
+    </style>
+</head>
+<body class="font-display bg-background-light dark:bg-background-dark text-text-light dark:text-text-dark">
+<div class="flex h-screen flex-col">
+<header class="flex items-center justify-between whitespace-nowrap border-b border-border-light dark:border-border-dark px-6 sm:px-10 py-4">
+<div class="flex items-center gap-4">
+<div class="w-8 h-8 rounded-full bg-primary flex items-center justify-center">
+<span class="text-white font-bold text-xl">E</span>
+</div>
+<h1 class="text-xl font-bold">Elentre Admin</h1>
+</div>
+<nav class="hidden md:flex items-center gap-8">
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Dashboard</a>
+<a class="text-sm font-medium text-primary" href="#">Products</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Orders</a>
+<a class="text-sm font-medium hover:text-primary transition-colors" href="#">Customers</a>
+</nav>
+<div class="flex items-center gap-4">
+<div class="relative">
+<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAwBBCKre64CQc8zlJ_ZVrP1SzAZJ7zIFlKPxf4xO5-ioaktWUivfI6AqhSmNJubU0DPB7JVIXPGt5VM8TLXuXGDT5WNlQOg8-0yfTwrykFf8tue2mQRxqXE_SI0uri9JN0HeQYY1t6xDenO0QZ96UWHCHUrVIDmXAyio-nw0QokTmkGcZ8ajc7K9I8ApMRvP-87p3KuhV0uZCtAE5yJt-mN1sHeWkHbMbEm3SeXdXYAUAZzZia8CrFQmD34QbkmjurskTTzeBCdmaU");'></div>
+<span class="absolute bottom-0 right-0 block h-3 w-3 rounded-full bg-green-500 border-2 border-background-light dark:border-background-dark"></span>
+</div>
+</div>
+</header>
+<main class="flex-1 overflow-y-auto">
+<div class="container mx-auto px-4 sm:px-6 lg:px-8 py-10">
+<div class="max-w-3xl mx-auto">
+<div class="mb-8">
+<h2 class="text-3xl font-bold tracking-tight">Edit Saree Details</h2>
+<p class="text-text-light/70 dark:text-text-dark/70 mt-1">Update the product information below.</p>
+</div>
+<form class="space-y-6">
+<div>
+<label class="block text-sm font-medium mb-2" for="product-name">Product Name</label>
+<input class="form-input w-full rounded-lg border bg-subtle-light dark:bg-subtle-dark border-border-light dark:border-border-dark focus:ring-primary focus:border-primary p-3 placeholder:text-placeholder-light dark:placeholder:text-placeholder-dark" id="product-name" placeholder="e.g. Kanjeevaram Silk Saree" type="text" value="Crimson Bloom Kanjeevaram"/>
+</div>
+<div>
+<label class="block text-sm font-medium mb-2" for="description">Description</label>
+<textarea class="form-textarea w-full rounded-lg border bg-subtle-light dark:bg-subtle-dark border-border-light dark:border-border-dark focus:ring-primary focus:border-primary p-3 placeholder:text-placeholder-light dark:placeholder:text-placeholder-dark" id="description" placeholder="Describe the saree's material, design, and occasion." rows="5">A masterpiece of traditional weaving, this Kanjeevaram saree features intricate zari work on a rich crimson silk base, perfect for weddings and grand celebrations.</textarea>
+</div>
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
+<div>
+<label class="block text-sm font-medium mb-2" for="price">Price (USD)</label>
+<div class="relative">
+<span class="absolute inset-y-0 left-0 flex items-center pl-3 text-text-light/50 dark:text-text-dark/50">$</span>
+<input class="form-input w-full rounded-lg border bg-subtle-light dark:bg-subtle-dark border-border-light dark:border-border-dark focus:ring-primary focus:border-primary p-3 pl-7 placeholder:text-placeholder-light dark:placeholder:text-placeholder-dark" id="price" placeholder="1500.00" type="text" value="1850.00"/>
+</div>
+</div>
+<div>
+<label class="block text-sm font-medium mb-2" for="sku">SKU</label>
+<input class="form-input w-full rounded-lg border bg-subtle-light dark:bg-subtle-dark border-border-light dark:border-border-dark focus:ring-primary focus:border-primary p-3 placeholder:text-placeholder-light dark:placeholder:text-placeholder-dark" id="sku" placeholder="e.g. ELN-KJV-001" type="text" value="ELN-KJV-042"/>
+</div>
+</div>
+<div>
+<label class="block text-sm font-medium mb-2">Product Images</label>
+<div class="mt-2 flex justify-center rounded-lg border border-dashed border-border-light dark:border-border-dark px-6 py-10 bg-subtle-light/50 dark:bg-subtle-dark/50">
+<div class="text-center">
+<svg aria-hidden="true" class="mx-auto h-12 w-12 text-text-light/40 dark:text-text-dark/40" fill="none" stroke="currentColor" viewBox="0 0 48 48">
+<path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+</svg>
+<div class="mt-4 flex text-sm leading-6 text-text-light/80 dark:text-text-dark/80">
+<label class="relative cursor-pointer rounded-md font-semibold text-primary focus-within:outline-none focus-within:ring-2 focus-within:ring-primary focus-within:ring-offset-2 dark:focus-within:ring-offset-background-dark hover:text-primary/80" for="file-upload">
+<span>Upload a file</span>
+<input class="sr-only" id="file-upload" name="file-upload" type="file"/>
+</label>
+<p class="pl-1">or drag and drop</p>
+</div>
+<p class="text-xs leading-5 text-text-light/60 dark:text-text-dark/60">PNG, JPG, GIF up to 10MB</p>
+</div>
+</div>
+</div>
+<div class="flex justify-end gap-4 pt-4">
+<button class="px-6 py-2.5 rounded-lg text-sm font-semibold bg-subtle-light dark:bg-subtle-dark hover:bg-border-light dark:hover:bg-border-dark transition-colors" type="button">
+                                Cancel
+                            </button>
+<button class="bg-primary text-white px-6 py-2.5 rounded-lg text-sm font-semibold hover:bg-primary/90 transition-colors shadow-md shadow-primary/30" type="submit">
+                                Save Changes
+                            </button>
+</div>
+</form>
+</div>
+</div>
+</main>
+</div>
+
+</body></html>
